--- a/LaughderApp/app/src/main/res/layout/activity_main.xml
+++ b/LaughderApp/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,21 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <EditText
-        android:text="@string/username"
         android:inputType="text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/usernameEditText"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:hint="@string/username" />
 
     <EditText
-        android:text="@string/password"
         android:inputType="textPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/usernameEditText"
         android:id="@+id/passwordEditText"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:hint="@string/password" />
 
     <Button
         android:layout_width="match_parent"
