--- a/LaughderApp/app/src/main/res/layout/activity_main.xml
+++ b/LaughderApp/app/src/main/res/layout/activity_main.xml
@@ -24,22 +24,23 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/passwordEditText"
         android:id="@+id/loginButton"
         android:text="@string/log_in"
         android:onClick="onLoginButtonClicked"
         android:textSize="20sp"  />
 
-    <EditText
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_alignBottom="@+id/passwordEditText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="204dp"
-        android:layout_marginStart="204dp" />
+        android:layout_below="@id/loginButton"
+        android:id="@+id/registerButton"
+        android:text="@string/register_button_text"
+        android:onClick="onRegisterButtonClicked"
+        android:textSize="20sp"  />
+
+
 
 
 </RelativeLayout>
