--- a/LaughderApp/app/src/main/res/menu/menu_match.xml
+++ b/LaughderApp/app/src/main/res/menu/menu_match.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools" tools:context=".LogInActivity">
     <item android:id="@+id/view_profile" android:title="Browse profiles"
         android:orderInCategory="110" app:showAsAction="always" />
     <item android:id="@+id/edit_profile" android:title="Edit profile"
