--- a/LaughderApp/app/src/main/res/layout/activity_browse.xml
+++ b/LaughderApp/app/src/main/res/layout/activity_browse.xml
@@ -35,6 +35,7 @@
         android:textSize="12sp" />
 
     <ImageView
+        android:contentDescription="@string/cont_descr"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:paddingTop="10dp"
@@ -48,6 +49,7 @@
         android:orientation="horizontal">
 
         <Button
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -59,6 +61,7 @@
             android:onClick="onLikeButtonClicked" />
 
         <Button
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
