--- a/LaughderApp/app/src/main/res/layout/list_item.xml
+++ b/LaughderApp/app/src/main/res/layout/list_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
-    <ListView
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        android:id="@+id/matchesListView"
-        android:layout_gravity="center_horizontal" />
+        android:textSize="30sp"
+        android:padding="10dp"
+        android:textStyle="bold"
+        android:id="@+id/matchTextView"/>
+
+
 </LinearLayout>
