--- a/LaughderApp/app/src/main/res/layout/activity_editprofile.xml
+++ b/LaughderApp/app/src/main/res/layout/activity_editprofile.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp">
 
     <EditText
         android:layout_width="match_parent"
@@ -24,6 +25,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="phone"
         android:id="@+id/phoneNumberEditText"
         android:maxLength="10"
         android:hint="@string/edit_profile_phone_number"
@@ -33,6 +35,7 @@
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="20dp"
         android:text="@string/save_profile_button_text"
         android:id="@+id/saveProfileButton"
         android:padding="10dp"
