--- a/LaughderApp/app/src/main/res/layout/activity_log_in.xml
+++ b/LaughderApp/app/src/main/res/layout/activity_log_in.xml
@@ -23,6 +23,7 @@
         android:hint="@string/password" />
 
     <Button
+        style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/passwordEditText"
@@ -32,6 +33,7 @@
         android:textSize="20sp"  />
 
     <Button
+        style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/loginButton"
